[tool.poetry]
name = "rabbitmq-storage-recoverer"
version = "0.1.0"
description = ""
authors = ["Wenceslas des Déserts <wenceslas.des-deserts@cybelangel.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
